# gc

./: .gitignore  404.html  CHANGELOG.md  README.md  TASKS.md  index.html  makefile  mkdocs.yml  pyproject.toml  reproduce_performance_issue.py
.github/workflows/: ci.yml  docs.yml
config/: signatures.yaml
deploy/: index.html
design/: index.html
develop/: index.html
docs/: deploy.md  design.md  develop.md  index.md  signatures.md  trail.md
journal/: 2026-03-15.md  2026-03-16.md  2026-03-18.md
plans/: design.md  documentation.md  fix-scanner-performance.md  gctrail.md  graceful-interrupt-scan.md  implement-canonical-mcts.md  implement-mark-phase.md  implement-mcts-search.md  implement-scanning-summary.md  implement-sentinel-verification.md  implement-stochastic-scanner.md  incremental-scan.md  parallel-scanner.md  performance-low-hanging-fruits.md  port-mcts-to-rust.md  redesign-scan-heuristics.md  scaffold.md
research/: build-systems-ml-cache-signatures.md  performance-report.md  rca-scanner-slowdown.md  rca-scanner-slowness.md
research/garbage-collection-signatures/: build-systems.md  heuristics-best-practices.md  (+2 more)
search/: search_index.json
signatures/: index.html
tests/: test_aggregator.py  test_aggregator_grouping.py  test_config_sentinels.py  test_engine.py  test_engine_deep.py  test_engine_sentinels.py  test_mcts_iteration.py  test_mcts_node.py  test_mcts_selection.py  test_performance_params.py  test_scanner.py  test_scanner_concurrency.py  test_scanner_evidence.py  test_scanner_refactor.py  test_trail.py  test_ui_mcts.py
trail/: index.html
(+14 files in other folders)
